# Bootstrap_Backprop

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
amortized_bootstrap/: baselines.py  baselines_m3.py  baselines_mean.py  bayes.py  calibration.py  config.py  datagen.py  distributions.py  evaluation.py  export.py  families.py  hill_oracle.py  model.py  nts_truth.py  ood_families.py  ood_truth.py  pretrained.py  stable_table.py  statistics.py  training.py
amortized_bootstrap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
amortized_bootstrap/experiments/: clustered_se.py  m1_uniform_max.py  (+9 more)
results/: m1_uniform_max.npz  m1_uniform_max_model.pt  m1_uniform_max_model_v1.pt  m1_uniform_max_model_v2.pt  m1_uniform_max_v1.npz  m1_uniform_max_v2.npz  m2_stable_mean.npz  m2_stable_mean_model.pt  m2_stable_mean_model_v1.pt  m2_stable_mean_model_v2.pt  m2_stable_mean_v1.npz  m2_stable_mean_v2.npz  m3_nts_truth_2000000_100000.npz  m3_nts_var.npz  m3_nts_var_model.pt  m3_nts_var_model_v1.pt  m3_nts_var_model_v2.pt  m3_nts_var_v1.npz  m3_nts_var_v2.npz  m3_pareto_hill.npz  m3_pareto_hill_model.pt  m3_pareto_hill_model_v1.pt  m3_pareto_hill_model_v2.pt  m3_pareto_hill_v1.npz  m3_pareto_hill_v2.npz  m4_ood.npz  m4_truth_burr_hill.npz  m4_truth_frechet_hill.npz  m4_truth_t_mean_heavy.npz  m4_truth_t_mean_light.npz  m4_truth_t_var99.npz  m4_universal.npz  m4_universal_model.pt  m4c_beta_max.npz  m4c_beta_max_model.pt  m5_real_var.npz  nts_var_grid_2000000.npz
tests/: test_pretrained.py  test_smoke.py
